# investment-news-chatbot

./: .gitignore  app.py  main.py  module1.ipynb  module2_summarizer.ipynb  module3_news.ipynb  module4_prompts.ipynb  pyproject.toml  summarizer.ipynb  test.py
src/: monitor.py  pipeline.py  portfolio.py
