[project]
name = "final-chatbot-for-summarize-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111.0",
    "lxml-html-clean>=0.4.5",
    "newsapi-python>=0.2.7",
    "newspaper3k>=0.2.8",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit==1.45.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
